# django-monorepo-microservice

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  common.py  docker-compose.yml  requirements.dev.txt  requirements.txt  retro.md  setup.cfg
common/: admin.py
common/api/: serializers.py
common/config/: logger.py  settings.py
common/events/: __init__.py  consumers.py  enums.py  exchanges.py  queues.py  utils.py
common/events/decorators/: tasks.py
common/events/producers/: __init__.py  core.py  error.py
common/events/tasks/: core.py
common/grpc/clients/: pg.py
common/models/: choices.py  managers.py  models.py
docker/: Dockerfile  ledger.Dockerfile  pg.Dockerfile  service1.Dockerfile  wallet.Dockerfile
docs/: TODO.md  dmm.postman_collection.json  init.sql
env/: ledger.env  postgres.env  wallet.env
proto/: pg.proto
scripts/: codegen.sh  command.sh  install.sh  keygen.sh  manage.sh
service/ledger/: requirements.txt
service/ledger/apps/ledger/: admin.py  callbacks.py  (+4 more)
service/ledger/config/: celery.py  exchanges.py  queues.py  settings.py  urls.py
service/ledger/scripts/: entrypoint.sh  run.sh
service/pg/: requirements.txt
service/pg/config/: settings.py
service/pg/scripts/: entrypoint.sh  run.sh
service/service1/config/: settings.py
service/service1/scripts/: entrypoint.sh  run.sh
service/wallet/: manage.py  requirements.txt
service/wallet/apps/: urls.py
service/wallet/config/: celery.py  exchanges.py  queues.py  settings.py  urls.py
service/wallet/scripts/: entrypoint.sh  run.sh
sql/: init.sql
(+34 files in other folders)
