[flake8]
max-line-length = 79
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv,examples,config/settings,tests,tests.py
ignore = W503, F403, F405, E402, E501

[pycodestyle]
max-line-length = 79
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv

[tools.yapf]
max-line-length = 79

[metadata]
name = django-monorepo-microservice
version = 1.0.0
description = Django Monorepo Microservice
long_description = file: README.md
url = https://github.com/pesfahanian/django-monorepo-microservice
author = Parsa Esfahanian
author_email = pesfahanian96@gmail.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Internet

[options]
include_package_data = true
packages = find:
python_requires = >=3.11
